fix spacing issue on blog login

--- a/Source/Server/FoundOps.Server/Content/Site.css
+++ b/Source/Server/FoundOps.Server/Content/Site.css
@@ -206,7 +206,7 @@ ul.tabs.homeTab
 #password, #rememberMe, #forgotPass
 {
     position: relative;
-    left: 230px;
+    left: 220px;
     top: -35px;
     width: 200px;
     font-size: 11px;
